--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to my blog</h1>
-    <h2>Today is a rainy day</h2>
-    <a href="https://nea.gov.sg">Link to NEA's website</a>
+    <h1 class="title">Welcome to my blog</h1>
+    <h3 class="title" id="important">Written by Preshant</h3>
+    <h3>Date: 1 Jan 2024</h3>
 
 </body>
 </html>
